cockroachlabs-preview-main/docs/v23.2/alter-database.mdx
---
title: "ALTER DATABASE"
old_description: "Use the ALTER DATABASE statement to change an existing database."
---

import { AlterDatabase2 } from "/snippets/syntax-diagrams/AlterDatabase2.jsx";

The `ALTER DATABASE` [statement](/docs/v23.2/sql-statements) applies a [schema change](/docs/v23.2/online-schema-changes) to a database.

<Note>
This schema change statement is registered as a job. You can view long-running jobs with [`SHOW JOBS`](/docs/v23.2/show-jobs).
</Note>

## Required privileges

Refer to the respective [subcommands](#subcommands).

## Synopsis

<AlterDatabase2 />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>database&#95;name</code></td><td>The name of the database you want to change.</td></tr></tbody></table>

Additional parameters are documented for the respective [subcommands](#subcommands).

## Subcommands

<table><thead><tr><th>Subcommand</th><th>Description</th></tr></thead><tbody><tr><td><a href="#add-region"><code>ADD REGION</code></a></td><td>Add a region to a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr><tr><td><a href="#add-super-region"><code>ADD SUPER REGION</code></a></td><td>Add a super region made up of a set of <a href="/docs/v23.2/multiregion-overview#super-regions">database regions</a> such that data from <a href="/docs/v23.2/regional-tables">regional tables</a> will be stored in only those regions.</td></tr><tr><td><a href="#alter-locality"><code>ALTER LOCALITY</code></a></td><td>Persistently modify the configuration generated by the standard <a href="/docs/v23.2/multiregion-overview">multi-region SQL abstractions</a> on a per-region basis. For advanced users who want to customize their multi-region setup using <a href="/docs/v23.2/zone-config-extensions">Zone Config Extensions</a>, a persistent, composable alternative to low-level <a href="/docs/v23.2/configure-replication-zones">zone configs</a>.</td></tr><tr><td><a href="#alter-super-region"><code>ALTER SUPER REGION</code></a></td><td>Alter an existing <a href="/docs/v23.2/multiregion-overview#super-regions">super region</a> to include a different set of regions. A super region is made up of a set of regions added with <a href="#add-region"><code>ADD REGION</code></a> such that data from <a href="/docs/v23.2/regional-tables">regional tables</a> will be stored in only those regions.</td></tr><tr><td><a href="#configure-zone"><code>CONFIGURE ZONE</code></a></td><td><a href="/docs/v23.2/configure-replication-zones">Replication Controls</a> for a database.</td></tr><tr><td><a href="#drop-region"><code>DROP REGION</code></a></td><td>Drop a region from a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr><tr><td><a href="#drop-secondary-region"><code>DROP SECONDARY REGION</code></a></td><td>Drop a <a href="/docs/v23.2/multiregion-overview#secondary-regions">secondary region</a> from a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr><tr><td><a href="#drop-super-region"><code>DROP SUPER REGION</code></a></td><td>Drop a super region made up of a set of <a href="/docs/v23.2/multiregion-overview#super-regions">database regions</a>.</td></tr><tr><td><a href="#owner-to"><code>OWNER TO</code></a></td><td>Change the owner of a database.</td></tr><tr><td><a href="#placement"><code>PLACEMENT</code></a></td><td>Configure the replica placement policy for a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr><tr><td><a href="#rename-to"><code>RENAME TO</code></a></td><td>Change the name of a database.</td></tr><tr><td><a href="#reset-session-variable"><code>RESET &#123;session variable&#125;</code></a></td><td>Reset the session variable values for the database to the system defaults. This syntax is identical to <a href="/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users"><code>ALTER ROLE ALL IN DATABASE ... RESET &#123;session variable&#125;</code></a>.</td></tr><tr><td><a href="#set-session-variable"><code>SET &#123;session variable&#125;</code></a></td><td>Set the default session variable values for the database. This syntax is identical to <a href="/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users"><code>ALTER ROLE ALL IN DATABASE ... SET &#123;session variable&#125;</code></a>.</td></tr><tr><td><a href="#set-primary-region"><code>SET PRIMARY REGION</code></a></td><td>Set the primary region of a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr><tr><td><a href="#set-secondary-region"><code>SET SECONDARY REGION</code></a></td><td>Set the <a href="/docs/v23.2/multiregion-overview#secondary-regions">secondary region of a multi-region database</a> for failover purposes.</td></tr><tr><td><a href="#survive-zone-region-failure"><code>SURVIVE &#123;ZONE,REGION&#125; FAILURE</code></a></td><td>Add a survival goal to a <a href="/docs/v23.2/multiregion-overview">multi-region database</a>.</td></tr></tbody></table>

### `ADD REGION`

`ALTER DATABASE.. ADD REGION` adds a [region](/docs/v23.2/multiregion-overview#database-regions) to a [multi-region database](/docs/v23.2/multiregion-overview). While CockroachDB processes an index modification or changing a table to or from a [`REGIONAL BY ROW` table](/docs/v23.2/table-localities#regional-by-row-tables), attempting to drop a region from the database containing that `REGIONAL BY ROW` table will produce an error. Similarly, while this statement is running, all index modifications and locality changes on [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables will be blocked.

<Warning>
In order to add a region with `ADD REGION`, you must first set a primary database region with [`SET PRIMARY REGION`](#set-primary-region), or at [database creation](/docs/v23.2/create-database). For an example showing how to add a primary region with `ALTER DATABASE`, see [Set the primary region](#set-the-primary-region).
</Warning>

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a region to a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#admin-role) role for the cluster.
- Either [ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database and all [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables in the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The <a href="/docs/v23.2/multiregion-overview#database-regions">region</a> being added to this database. Allowed values include any region present in <a href="/docs/v23.2/show-regions"><code>SHOW REGIONS FROM CLUSTER</code></a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `ADD SUPER REGION`

`ALTER DATABASE.. ADD SUPER REGION` adds a [super region](/docs/v23.2/multiregion-overview#super-regions) to a [multi-region database](/docs/v23.2/multiregion-overview).

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

To use super regions, keep the following considerations in mind:

- Your cluster must be a [multi-region cluster](/docs/v23.2/multiregion-overview).
- Super regions [must be enabled](#enable-super-regions).
- Super regions can only contain one or more [database regions](/docs/v23.2/multiregion-overview#database-regions) that have already been added with [`ALTER DATABASE... ADD REGION`](/docs/v23.2/alter-database#add-region).
- Each database region can only belong to one super region. In other words, given two super regions *A* and *B*, the set of database regions in *A* must be [disjoint](https://wikipedia.org/wiki/Disjoint_sets) from the set of database regions in *B*.
- You cannot [drop a region](/docs/v23.2/alter-database#drop-region) that is part of a super region until you either [alter the super region](/docs/v23.2/alter-database#alter-super-region) to remove it, or [drop the super region](/docs/v23.2/alter-database#drop-super-region) altogether.

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To add a super region to a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#admin-role) role for the cluster.
- Either [ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The name of the <a href="/docs/v23.2/multiregion-overview#super-regions">super region</a> being added to this database.</td></tr><tr><td><code>region&#95;name&#95;list</code></td><td>The super region consists of this set of <a href="/docs/v23.2/multiregion-overview#database-regions">database regions</a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `ALTER LOCALITY`

`ALTER DATABASE.. ALTER LOCALITY` provides a customization tool for advanced users to persistently modify the configuration generated by the standard [multi-region SQL abstractions](/docs/v23.2/multiregion-overview) on a per-region basis.

The feature this statement enables is also known as *Zone Config Extensions*. For more information about how it works, and the benefits over using the low-level [`CONFIGURE ZONE`](#configure-zone) statement, see [Zone Config Extensions](/docs/v23.2/zone-config-extensions).

For examples, see [Use Zone Config Extensions](#use-zone-config-extensions).

#### Required privileges

The user must be a member of the [`admin`](/docs/v23.2/security-reference/authorization#roles) or [owner](/docs/v23.2/security-reference/authorization#object-ownership) roles, or have the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>GLOBAL</code></td><td>Apply the Zone Configuration Extension to <a href="/docs/v23.2/table-localities#global-tables">global tables</a>.</td></tr><tr><td><code>REGIONAL</code></td><td>Apply the Zone Configuration Extension to all <a href="/docs/v23.2/table-localities#regional-tables"><code>REGIONAL BY TABLE</code></a> and <a href="/docs/v23.2/table-localities#regional-by-row-tables"><code>REGIONAL BY ROW</code></a> tables.</td></tr><tr><td><code>REGIONAL IN</code></td><td>Apply the Zone Configuration Extension to all <code>REGIONAL BY TABLE IN &#123;region&#125;</code> tables and all <code>&#123;region&#125;</code><a href="/docs/v23.2/partitioning">partitions</a> of <code>REGIONAL BY ROW</code> tables).</td></tr><tr><td><code>variable</code></td><td>The name of the <a href="/docs/v23.2/configure-replication-zones#replication-zone-variables">replication zone variable</a> to change for the <a href="/docs/v23.2/schema-design-overview">schema objects</a> in the specified <a href="/docs/v23.2/multiregion-overview#database-regions">region</a>.</td></tr><tr><td><code>value</code></td><td>The value of the <a href="/docs/v23.2/configure-replication-zones#replication-zone-variables">replication zone variable</a> to change for the <a href="/docs/v23.2/schema-design-overview">schema objects</a> in the specified <a href="/docs/v23.2/multiregion-overview#database-regions">region</a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `ALTER SUPER REGION`

`ALTER DATABASE.. ALTER SUPER REGION` alters an existing [super region](/docs/v23.2/multiregion-overview#super-regions) of a [multi-region database](/docs/v23.2/multiregion-overview).

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

To use super regions, keep the following considerations in mind:

- Your cluster must be a [multi-region cluster](/docs/v23.2/multiregion-overview).
- Super regions [must be enabled](#enable-super-regions).
- Super regions can only contain one or more [database regions](/docs/v23.2/multiregion-overview#database-regions) that have already been added with [`ALTER DATABASE... ADD REGION`](/docs/v23.2/alter-database#add-region).
- Each database region can only belong to one super region. In other words, given two super regions *A* and *B*, the set of database regions in *A* must be [disjoint](https://wikipedia.org/wiki/Disjoint_sets) from the set of database regions in *B*.
- You cannot [drop a region](/docs/v23.2/alter-database#drop-region) that is part of a super region until you either [alter the super region](/docs/v23.2/alter-database#alter-super-region) to remove it, or [drop the super region](/docs/v23.2/alter-database#drop-super-region) altogether.

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To alter a database's super region, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#admin-role) role for the cluster.
- Either [ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The name of the <a href="/docs/v23.2/multiregion-overview#super-regions">super region</a> being altered.</td></tr><tr><td><code>region&#95;name&#95;list</code></td><td>The altered super region will consist of this set of <a href="/docs/v23.2/multiregion-overview#database-regions">database regions</a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `CONFIGURE ZONE`

`ALTER DATABASE... CONFIGURE ZONE` is used to add, modify, reset, or remove replication zones for a database. To view details about existing replication zones, use [`SHOW ZONE CONFIGURATIONS`](/docs/v23.2/show-zone-configurations). For more information about replication zones, see [Replication Controls](/docs/v23.2/configure-replication-zones).

<Warning>
If you directly change a database's zone configuration with `ALTER DATABASE... CONFIGURE ZONE`, CockroachDB will block all [`ALTER DATABASE... SET PRIMARY REGION`](#set-primary-region) statements on the database.
</Warning>

<Warning>
Cockroach Labs [does not recommend modifying zone configurations manually](/docs/v23.2/configure-replication-zones#why-manual-zone-config-management-is-not-recommended).

Most users should use [multi-region SQL statements](/docs/v23.2/multiregion-overview) instead. If additional control is needed, use [Zone Config Extensions](/docs/v23.2/zone-config-extensions) to augment the multi-region SQL statements.
</Warning>

You can use *replication zones* to control the number and location of replicas for specific sets of data, both when replicas are first added and when they are rebalanced to maintain cluster equilibrium.

For examples, see [Replication Controls](#configure-replication-zones).

#### Required privileges

The user must be a member of the [`admin` role](/docs/v23.2/security-reference/authorization#admin-role) or have been granted [`CREATE`](/docs/v23.2/security-reference/authorization#supported-privileges) or [`ZONECONFIG`](/docs/v23.2/security-reference/authorization#supported-privileges) privileges. To configure [`system` objects](/docs/v23.2/configure-replication-zones#for-system-data), the user must be a member of the `admin` role.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>variable</code></td><td>The name of the <a href="/docs/v23.2/configure-replication-zones#replication-zone-variables">replication zone variable</a> to change.</td></tr><tr><td><code>value</code></td><td>The value of the <a href="/docs/v23.2/configure-replication-zones#replication-zone-variables">replication zone variable</a> to change.</td></tr><tr><td><code>DISCARD</code></td><td>Remove a replication zone.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `DROP REGION`

`ALTER DATABASE.. DROP REGION` drops a [region](/docs/v23.2/multiregion-overview#database-regions) from a [multi-region database](/docs/v23.2/multiregion-overview). While CockroachDB processes an index modification or changing a table to or from a [`REGIONAL BY ROW` table](/docs/v23.2/table-localities#regional-by-row-tables), attempting to drop a region from the database containing that `REGIONAL BY ROW` table will produce an error. Similarly, while this statement is running, all index modifications and locality changes on [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables will be blocked.

You cannot drop a region from a multi-region database if:

- The region is [set as the primary region](#set-primary-region), unless it is the last remaining region.
- The region is [set as the secondary region](#set-secondary-region). To drop the region, you must first unset the secondary region using [`DROP SECONDARY REGION`](#drop-secondary-region).
- The database uses the [`REGION` survival goal](/docs/v23.2/multiregion-survival-goals#survive-region-failures) and there are only three regions configured on the database.

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To drop a region from a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#roles) role for the cluster.
- Membership to the [owner](/docs/v23.2/security-reference/authorization#object-ownership) role, or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges), for the database and all [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables in the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The <a href="/docs/v23.2/multiregion-overview#database-regions">region</a> being dropped from this database. Allowed values include any region present in <a href="/docs/v23.2/show-regions"><code>SHOW REGIONS FROM DATABASE database&#95;name</code></a>.<br/>You can only drop the primary region from a multi-region database if it is the last remaining region.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `DROP SECONDARY REGION`

`ALTER DATABASE.. DROP SECONDARY REGION` unsets the [secondary region](/docs/v23.2/multiregion-overview#secondary-regions) (if set) from a [multi-region database](/docs/v23.2/multiregion-overview).

The secondary region is used for failover purposes: if the [primary region](#set-primary-region) fails, the secondary region acts as the new primary region. For more information, see [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions).

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To unset a secondary region on a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#roles) role for the cluster.
- Membership to the [owner](/docs/v23.2/security-reference/authorization#object-ownership) role, or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database.

### `DROP SUPER REGION`

`ALTER DATABASE.. DROP SUPER REGION` drops a [super region](/docs/v23.2/multiregion-overview#super-regions) from a [multi-region database](/docs/v23.2/multiregion-overview).

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

To use super regions, keep the following considerations in mind:

- Your cluster must be a [multi-region cluster](/docs/v23.2/multiregion-overview).
- Super regions [must be enabled](#enable-super-regions).
- Super regions can only contain one or more [database regions](/docs/v23.2/multiregion-overview#database-regions) that have already been added with [`ALTER DATABASE... ADD REGION`](/docs/v23.2/alter-database#add-region).
- Each database region can only belong to one super region. In other words, given two super regions *A* and *B*, the set of database regions in *A* must be [disjoint](https://wikipedia.org/wiki/Disjoint_sets) from the set of database regions in *B*.
- You cannot [drop a region](/docs/v23.2/alter-database#drop-region) that is part of a super region until you either [alter the super region](/docs/v23.2/alter-database#alter-super-region) to remove it, or [drop the super region](/docs/v23.2/alter-database#drop-super-region) altogether.

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To drop a super region from a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#roles) role for the cluster.
- Either [ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The name of the <a href="/docs/v23.2/multiregion-overview#super-regions">super region</a> being dropped from this database.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `OWNER TO`

`ALTER DATABASE... OWNER TO` is used to change the owner of a database.

For examples, see [Change database owner](#change-database-owner).

#### Required privileges

To change the owner of a database, the user must be an `admin` user, or the current owner of the database and a member of the new owner [role](/docs/v23.2/security-reference/authorization#roles). The user must also have the `CREATEDB` [privilege](/docs/v23.2/security-reference/authorization#managing-privileges).

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>role&#95;spec</code></td><td>The role to set as the owner of the database.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `PLACEMENT`

`ALTER DATABASE... PLACEMENT` is used to set the replica placement policy (`DEFAULT` or `RESTRICTED`) for a [multi-region database](/docs/v23.2/multiregion-overview)'s [regional tables](/docs/v23.2/regional-tables). [Regional tables](/docs/v23.2/regional-tables) are those with [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) or [`REGIONAL BY TABLE`](/docs/v23.2/table-localities#regional-tables) localities.

`ALTER DATABASE... PLACEMENT RESTRICTED` constrains the voting and non-voting replica placement for the database's tables to the [home regions](/docs/v23.2/alter-table#crdb_region) associated with those tables. This is a way of opting out of [non-voting replicas](/docs/v23.2/architecture/replication-layer#non-voting-replicas) for [regional tables](/docs/v23.2/regional-tables) to accomplish one or more of the following goals:

- Implement a [data domiciling](/docs/v23.2/data-domiciling) strategy.
- Reduce the amount of data stored on the cluster.
- Reduce the overhead of replicating data across a large number of regions (e.g., 10 or more) for databases with heavier write loads.

Note that `ALTER DATABASE... PLACEMENT RESTRICTED` does not allow you to opt out of placing [non-voting replicas](/docs/v23.2/architecture/replication-layer#non-voting-replicas) entirely. For example, [`GLOBAL` tables](/docs/v23.2/global-tables) in the database will remain unaffected by this statement. `GLOBAL` tables are designed to have replicas placed across all available [cluster regions](/docs/v23.2/multiregion-overview#cluster-regions) to ensure fast local reads.

For examples, see [Set replica placement policy](#set-replica-placement-policy).

#### Required privileges

To use this statement, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#roles) role for the cluster.
- [Ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database and all tables in the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>DEFAULT</code></td><td>Set the replica placement policy for <a href="/docs/v23.2/regional-tables">regional tables</a> to <code>DEFAULT</code>.</td></tr><tr><td><code>RESTRICTED</code></td><td>Set the replica placement policy for <a href="/docs/v23.2/regional-tables">regional tables</a> to <code>RESTRICTED</code>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

The replica placement policies work as follows:

- `DEFAULT` (**Default**): If the replica placement policy [is set to `DEFAULT`](#set-the-replica-placement-policy-to-default), CockroachDB will use its default replica placement settings, which mean that:
    - Data will be placed in as many regions as necessary to ensure your [database survival goals](/docs/v23.2/multiregion-overview#survival-goals) are met.
    - You can get fast stale reads from all [database regions](/docs/v23.2/multiregion-overview#database-regions).
- `RESTRICTED`: If the replica placement policy [is set to `RESTRICTED`](#set-the-replica-placement-policy-to-restricted), CockroachDB will constrain replica placement to only those regions where the table has voting replicas (that is, replicas which participate in the [Raft quorum](/docs/v23.2/architecture/replication-layer#raft)). In practice, this means that voting replicas for the table will be constrained to the table's [home region](/docs/v23.2/multiregion-overview#table-localities). Specifically, for [`REGIONAL BY TABLE`](/docs/v23.2/table-localities#regional-tables) tables, it will only place replicas in the defined region (or the database's [primary region](#set-primary-region)); for [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables, it will only place replicas for each underlying [partition](/docs/v23.2/partitioning) in the partition's specified region. Finally, note that:
    - Regional tables with this placement setting will no longer provide "fast stale reads" from other (non-home) regions, since fast stale reads rely on the presence of non-voting replicas.
    - The `RESTRICTED` replica placement policy is only available for databases with the [`ZONE` survival goal](/docs/v23.2/multiregion-survival-goals#survive-zone-failures).
    - This setting does not affect how [`GLOBAL` tables](/docs/v23.2/global-tables) work; they will still place replicas in all [database regions](/docs/v23.2/multiregion-overview#database-regions).

### `RENAME TO`

`ALTER DATABASE... RENAME TO` changes the name of a database.

<Note>
It is not possible to rename a database if the database is referenced by a [view](/docs/v23.2/views). For more details, see [View Dependencies](/docs/v23.2/views#view-dependencies).
</Note>

For examples, see [Rename database](#rename-database).

#### Required privileges

To rename a database, the user must be a member of the `admin` role or must have the [`CREATEDB`](/docs/v23.2/create-role#create-a-role-that-can-create-and-rename-databases) parameter set.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>database&#95;new&#95;name</code></td><td>The <a href="/docs/v23.2/sql-grammar#name"><code>name</code></a> you want to use for the database. The new name must be unique and follow these <a href="/docs/v23.2/keywords-and-identifiers#identifiers">identifier rules</a>. You cannot rename a database if it is set as the <a href="/docs/v23.2/sql-name-resolution#current-database">current database</a> or if <a href="/docs/v23.2/set-vars"><code>sql&#95;safe&#95;updates = true</code></a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `RESET {session variable}`

`ALTER DATABASE... RESET {session variable}` clears a database-level override of a [session variable](/docs/v23.2/set-vars#supported-variables) so that future sessions use the default value.

#### Required privileges

No [privileges](/docs/v23.2/security-reference/authorization#managing-privileges) are required to reset a session setting.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>session&#95;var</code></td><td>The name of the <a href="/docs/v23.2/set-vars#supported-variables">session variable</a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

#### Aliases

In CockroachDB, the following are aliases for `ALTER DATABASE... RESET {session variable}`:

- [`ALTER ROLE ALL IN DATABASE... RESET {session variable}`](/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users)

### `SET {session variable}`

`ALTER DATABASE... SET {session variable}` sets the default value of a [session variable](/docs/v23.2/set-vars#supported-variables) for all future sessions on the database. This command does **not** alter the session setting of the current session.

#### Required privileges

To set the `role` session variable, the current user must be a member of the `admin` role, or a member of the target role.

All other session variables do not require [privileges](/docs/v23.2/security-reference/authorization#managing-privileges) to modify.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>variable</code></td><td>The name of <a href="/docs/v23.2/set-vars#supported-variables">the session variable</a> to set. The variable name is case-insensitive.</td></tr><tr><td><code>value</code></td><td>The value, or list of values, to assign to the session variable.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

#### Aliases

In CockroachDB, the following are aliases for `ALTER DATABASE... SET {session variable}`:

- `ALTER ROLE ALL IN DATABASE... SET {session variable}`

For more information, refer to [`ALTER ROLE ALL...`](/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users).

### `SET PRIMARY REGION`

`ALTER DATABASE.. SET PRIMARY REGION` sets the primary [region](/docs/v23.2/multiregion-overview#database-regions) of a [multi-region database](/docs/v23.2/multiregion-overview).

<Warning>
If a database's [zone configuration](/docs/v23.2/configure-replication-zones) has been directly set with an [`ALTER DATABASE... CONFIGURE ZONE`](#configure-zone) statement, CockroachDB will block all `ALTER DATABASE... SET PRIMARY REGION` statements on the database.

To remove existing, manually-configured zones from a database (and unblock `SET PRIMARY REGION` statements on the database), use an [`ALTER DATABASE... CONFIGURE ZONE DISCARD`](#remove-a-replication-zone) statement.
</Warning>

[Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions) allow you to define a [database region](/docs/v23.2/multiregion-overview#database-regions) that will be used for failover in the event your primary region goes down. For more information, see [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions).

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a primary region to a database with no existing regions, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#roles) role for the cluster.
- Membership to the [owner](/docs/v23.2/security-reference/authorization#object-ownership) role, or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges), for the database and all tables in the database.

To switch primary regions to a region that has already been added to a database, the user must have membership to the [owner](/docs/v23.2/security-reference/authorization#object-ownership) role for the database, or have the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>The region to set as the database's primary region.<br/>Allowed values include any region present in <a href="/docs/v23.2/show-regions"><code>SHOW REGIONS FROM CLUSTER</code></a>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `SET SECONDARY REGION`

`ALTER DATABASE.. SET SECONDARY REGION` adds a [secondary region](/docs/v23.2/multiregion-overview#database-regions) to a [multi-region database](/docs/v23.2/multiregion-overview) for failover purposes.

If the [primary region](#set-primary-region) fails, the secondary region becomes the new primary region. For more information, see [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions).

<Warning>
In order to add a secondary region with `ALTER DATABASE... SET SECONDARY REGION`, you must first set a primary database region with [`SET PRIMARY REGION`](#set-primary-region), or when [creating the database](/docs/v23.2/create-database). For an example showing how to add a secondary region with `ALTER DATABASE`, see [Set the secondary region](#set-the-secondary-region).

[Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions) are not compatible with databases containing [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables. CockroachDB does not prevent you from defining secondary regions on databases with regional by row tables, but the interaction of these features is not supported.

Therefore, Cockroach Labs recommends that you avoid defining secondary regions on databases that use regional by row table configurations.
</Warning>

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a secondary region to a database, the user must have one of the following:

- Membership to the [`admin`](/docs/v23.2/security-reference/authorization#admin-role) role for the cluster.
- Either [ownership](/docs/v23.2/security-reference/authorization#object-ownership) or the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) for the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>region&#95;name</code></td><td>Usually, the <a href="/docs/v23.2/multiregion-overview#database-regions">region</a> being set as the secondary region for this database. E.g., <code>"ap-southeast-2"</code>. Allowed values include any (non-primary) region present in <code>SHOW REGIONS</code>.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

### `SURVIVE {ZONE,REGION} FAILURE`

`ALTER DATABASE... SURVIVE {ZONE,REGION} FAILURE` [statement](/docs/v23.2/sql-statements) sets the [survival goal](/docs/v23.2/multiregion-overview#survival-goals) for a [multi-region database](/docs/v23.2/multiregion-overview).

For examples, see [Configure survival goals](#configure-survival-goals).

#### Required privileges

The user must be a member of the [`admin`](/docs/v23.2/security-reference/authorization#roles) or [owner](/docs/v23.2/security-reference/authorization#object-ownership) roles, or have the [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the database.

#### Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>ZONE</code></td><td>Set the <a href="/docs/v23.2/multiregion-overview#survival-goals">survival goal</a> to zone failure.</td></tr><tr><td><code>REGION</code></td><td>Set the <a href="/docs/v23.2/multiregion-overview#survival-goals">survival goal</a> to region failure.</td></tr></tbody></table>

For usage, see [Synopsis](#synopsis).

## Examples

### Manage regions

#### Setup

Only a [cluster region](/docs/v23.2/multiregion-overview#cluster-regions) specified [at node startup](/docs/v23.2/cockroach-start#locality) can be used as a [database region](/docs/v23.2/multiregion-overview#database-regions).

To follow along with the examples in this section, start a [demo cluster](/docs/v23.2/cockroach-demo) with the [`--global` flag](/docs/v23.2/cockroach-demo#general) to simulate a multi-region cluster:

```shell
$ cockroach demo --global --nodes 9
```

To see the regions available to the databases in the cluster, use a [`SHOW REGIONS FROM CLUSTER`](/docs/v23.2/show-regions#view-the-regions-in-a-cluster) statement:

```sql
SHOW REGIONS FROM CLUSTER;
```

```text
     region    |  zones
---------------+----------
  europe-west1 | {b,c,d}
  us-east1     | {b,c,d}
  us-west1     | {a,b,c}
(3 rows)
```

#### Set the primary region

Suppose you want to make the database `movr` a multi-region database.

To add the first region to the database, or to set an already-added region as the primary region, use a [`SET PRIMARY REGION`](#set-primary-region) statement:

```sql
ALTER DATABASE movr SET PRIMARY REGION "us-east1";
```

```text
ALTER DATABASE PRIMARY REGION
```

Given a cluster with multiple regions, any databases in that cluster that have not yet had their primary regions set will have their replicas spread as broadly as possible for resiliency. When a primary region is added to one of these databases:

- All tables will be [`REGIONAL BY TABLE`](/docs/v23.2/alter-table#regional-by-table) in the primary region by default.
- This means that all such tables will have all of their voting replicas and leaseholders moved to the primary region. This process is known as [rebalancing](/docs/v23.2/architecture/replication-layer#leaseholder-rebalancing).

#### Add regions to a database

To add more regions to a database that already has at least one region:

```sql
ALTER DATABASE movr ADD region "us-west1";
```

```text
ALTER DATABASE ADD REGION
```

```sql
ALTER DATABASE movr ADD region "europe-west1";
```

```text
ALTER DATABASE ADD REGION
```

To view the regions associated with a multi-region database, use a [`SHOW REGIONS FROM DATABASE`](/docs/v23.2/show-regions) statement:

```sql
SHOW REGIONS FROM DATABASE movr;
```

```text
  database |    region    | primary | secondary |  zones
-----------+--------------+---------+-----------+----------
  movr     | us-east1     |    t    |     f     | {b,c,d}
  movr     | europe-west1 |    f    |     f     | {b,c,d}
  movr     | us-west1     |    f    |     f     | {a,b,c}
(3 rows)
```

#### Set the secondary region

To set an existing [database region](/docs/v23.2/multiregion-overview#database-regions) (that is not already the [primary region](#set-the-primary-region)) as the [secondary region](/docs/v23.2/multiregion-overview#secondary-regions), use the following statement:

```sql
ALTER DATABASE movr SET SECONDARY REGION "us-west1";
```

```text
ALTER DATABASE SET SECONDARY REGION
```

Now, the `"us-west1"` region will act as the primary region if the original primary region fails.

<Warning>
[Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions) are not compatible with databases containing [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables) tables. CockroachDB does not prevent you from defining secondary regions on databases with regional by row tables, but the interaction of these features is not supported.

Therefore, Cockroach Labs recommends that you avoid defining secondary regions on databases that use regional by row table configurations.
</Warning>

#### Unset the secondary region

To unset an existing [database region](/docs/v23.2/multiregion-overview#database-regions) as the [secondary region](/docs/v23.2/multiregion-overview#secondary-regions) on a multi-region database, use the [`DROP SECONDARY REGION`](#drop-secondary-region) statement:

```sql
ALTER DATABASE movr DROP SECONDARY REGION;
```

```text
ALTER DATABASE DROP SECONDARY REGION
```

<Note>
This statement does not drop the region from the database. To drop a region, use [`DROP REGION`](#drop-a-region-from-a-database).
</Note>

#### Change the existing primary region

To change the primary region to another region in the database, use a [`SET PRIMARY REGION`](#set-primary-region) statement.

```sql
ALTER DATABASE movr SET PRIMARY REGION "europe-west1";
```

```text
ALTER DATABASE PRIMARY REGION
```

You can only change an existing primary region to a region that has already been [added to the database](#add-regions-to-a-database). If you try to change the primary region to a region that is not already associated with a database, CockroachDB will return an error.

#### Drop a region from a database

To [drop a region](#drop-region) from a multi-region database, use a [`DROP REGION`](#drop-region) statement.

```sql
ALTER DATABASE movr DROP REGION "us-east1";
```

```text
ALTER DATABASE DROP REGION
```

You cannot drop a region from a multi-region database if:

- The region is [set as the primary region](#set-the-primary-region), unless it is the last remaining region.
- The region is [set as the secondary region](#set-the-secondary-region). To drop the region, you must first unset the secondary region using [`DROP SECONDARY REGION`](#unset-the-secondary-region).
- The database uses the [`REGION` survival goal](/docs/v23.2/multiregion-survival-goals#survive-region-failures) and there are only three regions configured on the database.

### Manage super regions

#### Setup

Only a [cluster region](/docs/v23.2/multiregion-overview#cluster-regions) specified [at node startup](/docs/v23.2/cockroach-start#locality) can be used as a [database region](/docs/v23.2/multiregion-overview#database-regions).

To follow along with the examples in this section, start a [demo cluster](/docs/v23.2/cockroach-demo) with the [`--global` flag](/docs/v23.2/cockroach-demo#general) to simulate a multi-region cluster:

```shell
$ cockroach demo --global --nodes 9
```

To see the regions available to the databases in the cluster, use a [`SHOW REGIONS FROM CLUSTER`](/docs/v23.2/show-regions#view-the-regions-in-a-cluster) statement:

```sql
SHOW REGIONS FROM CLUSTER;
```

```text
     region    |  zones
---------------+----------
  europe-west1 | {b,c,d}
  us-east1     | {b,c,d}
  us-west1     | {a,b,c}
(3 rows)
```

##### Set up MovR database regions

Execute the following statements. They will tell CockroachDB about the database's regions. This information is necessary so that CockroachDB can later move data around to optimize access to particular data from particular regions. For more information about how this works at a high level, see [Database Regions](/docs/v23.2/multiregion-overview#database-regions).

```sql
ALTER DATABASE movr PRIMARY REGION "us-east1";
ALTER DATABASE movr ADD REGION "europe-west1";
ALTER DATABASE movr ADD REGION "us-west1";
```

##### Set up MovR global tables

Because the data in `promo_codes` is not updated frequently (a.k.a., "read-mostly"), and needs to be available from any region, the right table locality is [`GLOBAL`](/docs/v23.2/table-localities#global-tables).

```sql
ALTER TABLE promo_codes SET locality GLOBAL;
```

Next, alter the `user_promo_codes` table to have a foreign key into the global `promo_codes` table. This will enable fast reads of the `promo_codes.code` column from any region in the cluster.

```sql
ALTER TABLE user_promo_codes
  ADD CONSTRAINT user_promo_codes_code_fk
    FOREIGN KEY (code)
    REFERENCES promo_codes (code)
    ON UPDATE CASCADE;
```

##### Set up MovR regional tables

All of the tables except `promo_codes` contain rows which are partitioned by region, and updated very frequently. For these tables, the right table locality for optimizing access to their data is [`REGIONAL BY ROW`](/docs/v23.2/table-localities#regional-by-row-tables).

Apply this table locality to the remaining tables. These statements use a `CASE` statement to put data for a given city in the right region and can take around 1 minute to complete for each table.

- `rides`

    ```sql
    ALTER TABLE rides ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
    ) STORED;
    ALTER TABLE rides ALTER COLUMN REGION SET NOT NULL;
    ALTER TABLE rides SET LOCALITY REGIONAL BY ROW AS "region";
    ```
- `user_promo_codes`

    ```sql
    ALTER TABLE user_promo_codes ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
    ) STORED;
    ALTER TABLE user_promo_codes ALTER COLUMN REGION SET NOT NULL;
    ALTER TABLE user_promo_codes SET LOCALITY REGIONAL BY ROW AS "region";
    ```
- `users`

    ```sql
    ALTER TABLE users ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
    ) STORED;
    ALTER TABLE users ALTER COLUMN REGION SET NOT NULL;
    ALTER TABLE users SET LOCALITY REGIONAL BY ROW AS "region";
    ```
- `vehicle_location_histories`

    ```sql
    ALTER TABLE vehicle_location_histories ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
    ) STORED;
    ALTER TABLE vehicle_location_histories ALTER COLUMN REGION SET NOT NULL;
    ALTER TABLE vehicle_location_histories SET LOCALITY REGIONAL BY ROW AS "region";
    ```
- `vehicles`

    ```sql
    ALTER TABLE vehicles ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
    ) STORED;
    ALTER TABLE vehicles ALTER COLUMN REGION SET NOT NULL;
    ALTER TABLE vehicles SET LOCALITY REGIONAL BY ROW AS "region";
    ```

#### Enable super regions

To enable super regions, set the `enable_super_regions` [session setting](/docs/v23.2/set-vars) to `'on'`:

```sql
SET enable_super_regions = 'on';
```

```text
SET
```

You can also set the `sql.defaults.super_regions.enabled` [cluster setting](/docs/v23.2/cluster-settings) to `true`:

```sql
SET CLUSTER SETTING  sql.defaults.super_regions.enabled = true;
```

```text
SET CLUSTER SETTING
```

#### Add a super region to a database

To add a super region to a multi-region database, use the `ALTER DATABASE... ADD SUPER REGION` statement:

```sql
ALTER DATABASE movr ADD SUPER REGION "usa" VALUES "us-east1", "us-west1";
```

```text
ALTER DATABASE ADD SUPER REGION
```

#### Alter a super region

This example assumes you have already added a `"usa"` super region as shown in the example [Add a super region to a database](#add-a-super-region-to-a-database). If you wanted to [drop the region](#drop-region) `us-west1`, you would first need to remove it from the super region.

To remove a region from a super region, use the `ALTER DATABASE... ALTER SUPER REGION` statement and list only the regions that should remain in the super region:

```sql
ALTER DATABASE movr ALTER SUPER REGION "usa" VALUES "us-east1";
```

```text
ALTER DATABASE ALTER SUPER REGION
```

To add a region to a super region, alter the super region as shown above to be a list of regions that includes the existing and the new regions.

#### Allow user to modify a primary region that is part of a super region

By default, you may not change the [primary region](/docs/v23.2/alter-database#set-primary-region) of a [multi-region database](/docs/v23.2/multiregion-overview) when that region is part of a super region. This is a safety setting designed to prevent you from accidentally moving the data for a [regional table](/docs/v23.2/regional-tables) that is meant to be stored in the super region out of that super region, which could break your data domiciling setup.

If you are sure about what you are doing, you can allow modifying the primary region by setting the `alter_primary_region_super_region_override` [session setting](/docs/v23.2/set-vars) to `'on'`:

```sql
SET alter_primary_region_super_region_override = 'on';
```

```text
SET
```

You can also accomplish this by setting the `sql.defaults.alter_primary_region_super_region_override.enable` [cluster setting](/docs/v23.2/cluster-settings) to `true`:

```sql
SET CLUSTER SETTING  sql.defaults.alter_primary_region_super_region_override.enable = true;
```

```text
SET CLUSTER SETTING
```

#### Drop a super region from a database

To drop a super region from a multi-region database, use a [`DROP SUPER REGION`](#drop-super-region) statement:

```sql
ALTER DATABASE movr DROP SUPER REGION "usa";
```

```text
ALTER DATABASE DROP SUPER REGION
```

Note that you cannot [drop a region](#drop-region) that is part of a super region until you either [alter the super region](#alter-super-region) to remove it, or [drop the super region](#drop-super-region) altogether.

For example, using the super region that was added in [`ADD SUPER REGION`](#add-a-super-region-to-a-database):

```sql
ALTER DATABASE movr DROP REGION "us-west1";
```

```text
ERROR: region us-west1 is part of super region usa
SQLSTATE: 2BP01
HINT: you must first drop super region usa before you can drop the region us-west1
```

### Configure replication zones

<Warning>
Cockroach Labs [does not recommend modifying zone configurations manually](/docs/v23.2/configure-replication-zones#why-manual-zone-config-management-is-not-recommended).

Most users should use [multi-region SQL statements](/docs/v23.2/multiregion-overview) instead. If additional control is needed, use [Zone Config Extensions](/docs/v23.2/zone-config-extensions) to augment the multi-region SQL statements.
</Warning>

#### Setup

The following examples use MovR, a fictional vehicle-sharing application, to demonstrate CockroachDB SQL statements. For more information about the MovR example application and dataset, see [MovR: A Global Vehicle-sharing App](/docs/v23.2/movr).

To follow along, run [`cockroach demo`](/docs/v23.2/cockroach-demo) with the `--geo-partitioned-replicas` flag. This command opens an interactive SQL shell to a temporary, 9-node in-memory cluster with the `movr` database.

```shell
$ cockroach demo --geo-partitioned-replicas
```

#### Create a replication zone for a database

To control replication for a specific database, use the `ALTER DATABASE... CONFIGURE ZONE` statement to define the relevant values (other values will be inherited from the parent zone):

```sql
> ALTER DATABASE movr CONFIGURE ZONE USING num_replicas = 5, gc.ttlseconds = 100000;
```

```text
CONFIGURE ZONE 1
```

```sql
> SHOW ZONE CONFIGURATION FROM DATABASE movr;
```

```text
     target     |              raw_config_sql
----------------+-------------------------------------------
  DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                |     range_min_bytes = 134217728,
                |     range_max_bytes = 536870912,
                |     gc.ttlseconds = 100000,
                |     num_replicas = 5,
                |     constraints = '[]',
                |     lease_preferences = '[]'
(1 row)
```

#### Edit a replication zone

```sql
ALTER DATABASE movr CONFIGURE ZONE USING range_min_bytes = 0, range_max_bytes = 90000, gc.ttlseconds = 89999, num_replicas = 4;
```

#### Remove a replication zone

<Note>
When you discard a zone configuration, the objects it was applied to will then inherit a configuration from an object "the next level up"; e.g., if the object whose configuration is being discarded is a table, it will use its parent database's configuration.

You cannot `DISCARD` any zone configurations on multi-region tables, indexes, or partitions if the [multi-region abstractions](/docs/v23.2/migrate-to-multiregion-sql#replication-zone-patterns-and-multi-region-sql-abstractions) created the zone configuration.
</Note>

```sql
ALTER DATABASE movr CONFIGURE ZONE DISCARD;
```

### Troubleshoot replication zones

For instructions showing how to troubleshoot replication zones that may be misconfigured, see [Troubleshoot Replication Zone Configurations](/docs/v23.2/troubleshoot-replication-zones).

### Use Zone Config Extensions

The following examples show:

- How to [override specific fields of a schema object's zone configs](#override-specific-fields-of-a-schema-objects-zone-configs).
- How something like the [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions) multi-region abstraction could have been implemented using Zone Config Extensions. For this example, we will call it ["Failover regions"](#failover-regions).
- How to [reset a region's Zone Config Extensions](#reset-a-regions-zone-config-extensions).
- How to [discard a region's Zone Config Extensions](#discard-a-regions-zone-config-extensions).
- How you could [implement super regions](#implement-super-regions).
- How to [minimize cross-region write latency](#minimize-cross-region-write-latency).

<Note>
We strongly recommend using the multi-region abstractions over "rolling your own" using Zone Config Extensions. These examples are provided to show the flexibility of Zone Config Extensions.
</Note>

#### Setup

The setup described in this section will be used in the following examples.

##### Start a cluster

Start a [`cockroach demo`](/docs/v23.2/cockroach-demo) cluster as follows:

```shell
cockroach demo --global --nodes=9
```

This gives us a (preloaded) [MovR](/docs/v23.2/movr) database on a cluster with the following [regions](/docs/v23.2/multiregion-overview#cluster-regions), which can be viewed with [`SHOW REGIONS`](/docs/v23.2/show-regions):

```sql
SHOW REGIONS;
```

```text
     region    |  zones  | database_names | primary_region_of | secondary_region_of
---------------+---------+----------------+-------------------+----------------------
  europe-west1 | {b,c,d} | {}             | {}                | {}
  us-east1     | {b,c,d} | {}             | {}                | {}
  us-west1     | {a,b,c} | {}             | {}                | {}
(3 rows)
```

##### Make the database multi-region

Next, modify the database to use the [multi-region abstractions](/docs/v23.2/multiregion-overview) as follows:

1. Set the primary region using [`SET PRIMARY REGION`](#set-primary-region).
2. Add the other two regions using [`ADD REGION`](#add-region).

```sql
ALTER DATABASE movr SET PRIMARY REGION "us-east1";
```

```sql
ALTER DATABASE movr ADD REGION "us-west1";
```

```sql
ALTER DATABASE movr ADD REGION "europe-west1";
```

#### Override specific fields of a schema object's zone configs

In this example we will configure a multi-region [MovR](/docs/v23.2/movr) database to update its [`lease_preferences`](/docs/v23.2/configure-replication-zones#lease_preferences) field.

Setting the [primary region](#set-primary-region) to `us-east1` [during the setup steps](#use-zone-config-extensions) added `us-east1` to `lease_preferences`.

```sql
SHOW ZONE CONFIGURATION FROM DATABASE movr;
```

```text
     target     |                                      raw_config_sql
----------------+-------------------------------------------------------------------------------------------
  DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                |     range_min_bytes = 134217728,
                |     range_max_bytes = 536870912,
                |     gc.ttlseconds = 90000,
                |     num_replicas = 5,
                |     num_voters = 3,
                |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                |     voter_constraints = '[+region=us-east1]',
                |     lease_preferences = '[[+region=us-east1]]'
(1 row)
```

We will now use `ALTER DATABASE... ALTER LOCALITY` to overwrite the `lease_preferences` field to add `us-west1` to the list of regions:

```sql
ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "us-east1" CONFIGURE ZONE USING lease_preferences = '[[+region=us-east1], [+region=us-west1]]';
```

To view the updated zone configs, enter the following statement:

```sql
SHOW ZONE CONFIGURATION FROM DATABASE movr;
```

```text
     target     |                                      raw_config_sql
----------------+-------------------------------------------------------------------------------------------
  DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                |     range_min_bytes = 134217728,
                |     range_max_bytes = 536870912,
                |     gc.ttlseconds = 90000,
                |     num_replicas = 5,
                |     num_voters = 3,
                |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                |     voter_constraints = '[+region=us-east1]',
                |     lease_preferences = '[[+region=us-east1], [+region=us-west1]]'
(1 row)
```

The `lease_preferences` field is now updated to include `us-west1`.

To remove the changes made in this example, [reset the Zone Config Extensions](#reset-a-regions-zone-config-extensions).

#### Implement super regions

In this example, [Zone Config Extensions](/docs/v23.2/zone-config-extensions) are used to provide an alternative implementation of [super regions](/docs/v23.2/multiregion-overview#super-regions), which are useful for [data domiciling](/docs/v23.2/data-domiciling).

For this example, you need to start a [`cockroach demo` cluster](/docs/v23.2/cockroach-demo) using the following command, which [defines the available cluster localities using the `--demo-locality` flag](/docs/v23.2/cockroach-demo#demo-locality):

```shell
cockroach demo --nodes=9 --demo-locality=region=us-east1:region=us-east1:region=us-central1:region=us-west1:region=europe-west1:region=europe-west1:region=europe-central1:region=europe-east1:region=europe-east1
```

Next, enter the following statements at the SQL prompt. These statements will:

- Make the [`movr` database](/docs/v23.2/movr) into a [multi-region database](/docs/v23.2/multiregion-overview) by [setting the primary region](/docs/v23.2/alter-database#set-primary-region).
- Set the `movr` database to [survive region failures](/docs/v23.2/multiregion-survival-goals#survive-region-failures).
- Add the remaining regions defined at cluster start time to the multi-region `movr` database (for a total of 6).

```sql
ALTER DATABASE movr SET PRIMARY REGION "us-east1";
ALTER DATABASE movr ADD REGION "us-central1";
ALTER DATABASE movr ADD REGION "us-west1";
ALTER DATABASE movr ADD REGION "europe-west1";
ALTER DATABASE movr ADD REGION "europe-central1";
ALTER DATABASE movr ADD REGION "europe-east1";
ALTER DATABASE movr SURVIVE REGION FAILURE;
```

Now that the multi-region cluster is configured, we will use the following [`ALTER LOCALITY`](#alter-locality) statements to [configure replication zones](/docs/v23.2/configure-replication-zones) such that:

- [Replicas](/docs/v23.2/architecture/overview#architecture-replica) in the `us-east1` region are only stored on nodes in the US.
- Replicas in the `europe-central1` region are only stored on nodes in the EU.

```sql
ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "us-east1" CONFIGURE ZONE USING
    num_replicas = 7,
    constraints = '{+region=us-east1: 3,
                    +region=us-central1: 3,
                    +region=us-west1: 1}',
    lease_preferences = '[[+region=us-east1], [+region=us-central1]]';
```

```sql
ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "europe-central1" CONFIGURE ZONE USING
    num_replicas = 7,
    constraints = '{+region=europe-central1: 3,
                    +region=europe-west1: 3,
                    +region=europe-east1: 1}',
    lease_preferences = '[[+region=europe-central1], [+region=europe-west1]]';
```

#### Minimize cross-region write latency

In this example, [Zone Config Extensions](/docs/v23.2/zone-config-extensions) are used to minimize cross-region write latency in a cluster with the following characteristics:

- Three main US regions ( `us-west1`, `us-east1`, `us-central1` ).
- Two additional distant regions ( `europe-west1`, `asia-northeast1` ). Only [follower reads](/docs/v23.2/follower-reads) will be made from these regions.

To minimize the cross-region write latency, [configure replication zones](/docs/v23.2/configure-replication-zones) such that the 3 US regions have voting replicas (that is, replicas that participate in [Raft quorum](/docs/v23.2/architecture/replication-layer#raft)). This will leave the 2 additional non-US regions with only [non-voting replicas](/docs/v23.2/architecture/replication-layer#non-voting-replicas).

For this example, you need to start a [`cockroach demo` cluster](/docs/v23.2/cockroach-demo) using the following command, which [defines the available cluster localities using the `--demo-locality` flag](/docs/v23.2/cockroach-demo#demo-locality):

```shell
cockroach demo --nodes=5 --demo-locality=region=us-east1:region=us-west1:region=us-central1:region=europe-west1:region=asia-northeast1
```

Next, enter the following statements at the SQL prompt. These statements will:

- Make the [`movr` database](/docs/v23.2/movr) into a [multi-region database](/docs/v23.2/multiregion-overview) by [setting the primary region](/docs/v23.2/alter-database#set-primary-region).
- Set the `movr` database to [survive region failures](/docs/v23.2/multiregion-survival-goals#survive-region-failures).
- Add the remaining regions defined at cluster start time to the multi-region `movr` database (for a total of 5).

```sql
ALTER DATABASE movr SET PRIMARY REGION "us-west1";
ALTER DATABASE movr ADD REGION "us-central1";
ALTER DATABASE movr ADD REGION "us-east1";
ALTER DATABASE movr ADD REGION "europe-west1";
ALTER DATABASE movr ADD REGION "asia-northeast1";
ALTER DATABASE movr SURVIVE REGION FAILURE;
```

By default, all tables in the `movr` database are [`REGIONAL` tables](/docs/v23.2/regional-tables):

```sql
SHOW TABLES;
```

```text
  schema_name |         table_name         | type  | owner | estimated_row_count |              locality
--------------+----------------------------+-------+-------+---------------------+--------------------------------------
  public      | promo_codes                | table | demo  |                1000 | REGIONAL BY TABLE IN PRIMARY REGION
  public      | rides                      | table | demo  |                 500 | REGIONAL BY TABLE IN PRIMARY REGION
  public      | user_promo_codes           | table | demo  |                   5 | REGIONAL BY TABLE IN PRIMARY REGION
  public      | users                      | table | demo  |                  50 | REGIONAL BY TABLE IN PRIMARY REGION
  public      | vehicle_location_histories | table | demo  |                1000 | REGIONAL BY TABLE IN PRIMARY REGION
  public      | vehicles                   | table | demo  |                  15 | REGIONAL BY TABLE IN PRIMARY REGION
(6 rows)
```

Now that the multi-region cluster is configured, we will use the following [`ALTER LOCALITY`](#alter-locality) statements to [configure replication zones](/docs/v23.2/configure-replication-zones) such that:

- The 3 US regions have voting replicas (that is, replicas that participate in [Raft quorum](/docs/v23.2/architecture/replication-layer#raft) ).
- The 2 additional regions (Europe and Japan) are left with only [non-voting replicas](/docs/v23.2/architecture/replication-layer#non-voting-replicas) that can be used to serve [follower reads](/docs/v23.2/follower-reads).

```sql
ALTER DATABASE movr ALTER LOCALITY REGIONAL CONFIGURE ZONE USING voter_constraints = '{+region=us-west1: 2, +region=us-central1: 2, +region=us-east1: 1}';
```

#### Failover regions

In this example we will use Zone Config Extensions to configure a multi-region [MovR](/docs/v23.2/movr) database so that if the [primary region](#set-primary-region) fails, enough [replicas](/docs/v23.2/architecture/distribution-layer) will be found in another region (the "failover" region) to take over for the primary region. We will set the [locality scope for this configuration to be `REGIONAL IN`](#parameters), which covers all [`REGIONAL BY TABLE IN {region}` tables](/docs/v23.2/alter-table#set-the-table-locality-to-regional-by-table) and all `{region}` [partitions](/docs/v23.2/partitioning) of [`REGIONAL BY ROW` tables](/docs/v23.2/alter-table#set-the-table-locality-to-regional-by-row).

<Note>
This functionality is already provided by the built-in [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions) feature. It is used here to show the flexibility of Zone Config Extensions. We strongly recommend using the [built-in multi-region features](/docs/v23.2/multiregion-overview) whenever possible.
</Note>

1. Set the database to have a `REGION` survival goal using [`ALTER DATABASE... SURVIVE REGION FAILURE`](/docs/v23.2/alter-database#survive-zone-region-failure):

    ```sql
     ALTER DATABASE movr SURVIVE REGION FAILURE;
    ```
2. Apply the `REGIONAL BY ROW` locality to the `movr.rides` table using the following statement:

    ```sql
     ALTER TABLE rides ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
     ) STORED;
     ALTER TABLE rides ALTER COLUMN region SET NOT NULL;
     ALTER TABLE rides SET LOCALITY REGIONAL BY ROW AS "region";
    ```
3. View the [zone configs](/docs/v23.2/configure-replication-zones) for the `movr.rides` table using [`SHOW ZONE CONFIGURATION`](/docs/v23.2/show-zone-configurations):

    ```sql
     SHOW ZONE CONFIGURATION FROM TABLE movr.rides;
    ```

    ```text
          target     |                                      raw_config_sql
     ----------------+-------------------------------------------------------------------------------------------
       DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                     |     range_min_bytes = 134217728,
                     |     range_max_bytes = 536870912,
                     |     gc.ttlseconds = 90000,
                     |     num_replicas = 5,
                     |     num_voters = 5,
                     |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                     |     voter_constraints = '{+region=us-east1: 2}',
                     |     lease_preferences = '[[+region=us-east1]]'
     (1 row)
    ```

    Remember that [we configured `us-east1` to be our primary region during cluster setup](#use-zone-config-extensions). The output above confirms that `us-east1` is the primary region based on the values of the [`voter_constraints`](/docs/v23.2/configure-replication-zones#voter_constraints) and [`lease_preferences`](/docs/v23.2/configure-replication-zones#lease_preferences) keys.
4. Update the configuration to keep additional voting replicas and leaseholders in `us-west1`. We do this because we would like to configure `us-west1` to be the failover region for `us-east1`. The following SQL statement accomplishes this by configuring `us-east1` to keep additional voting replicas and leaseholders in `us-west1`. This means that if `us-east1` fails, it will fail over to `us-west1`.

    ```sql
     ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "us-east1" CONFIGURE ZONE USING voter_constraints = '{+region=us-east1: 2, +region=us-west1: 2}', lease_preferences = '[[+region=us-east1], [+region=us-west1]]';
    ```
5. View the [zone configs](/docs/v23.2/configure-replication-zones) for the `movr.rides` table using [`SHOW ZONE CONFIGURATION`](/docs/v23.2/show-zone-configurations):

    ```sql
     SHOW ZONE CONFIGURATION FROM TABLE movr.rides;
    ```

    ```text
          target     |                                      raw_config_sql
     ----------------+-------------------------------------------------------------------------------------------
       DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                     |     range_min_bytes = 134217728,
                     |     range_max_bytes = 536870912,
                     |     gc.ttlseconds = 90000,
                     |     num_replicas = 5,
                     |     num_voters = 5,
                     |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                     |     voter_constraints = '{+region=us-east1: 2, +region=us-west1: 2}',
                     |     lease_preferences = '[[+region=us-east1], [+region=us-west1]]'
     (1 row)
    ```

    The following changes are shown: - There are now 2 voting replicas stored in `us-west1`. - There is now a preference that if leases cannot be placed in `us-east1`, they should be placed in `us-west1`.

    Both of these changes combine to ensure that if `us-east1` goes down, the cluster will still be able to operate until some mitigation is in place.

To remove the zone config changes made in this example, [reset the Zone Config Extensions](#reset-a-regions-zone-config-extensions).

#### Reset a region's Zone Config Extensions

To reset the Zone Config Extension configuration applied to a region to the default settings, enter the following statement:

```sql
ALTER DATABASE movr ALTER LOCALITY CONFIGURE ZONE USING DEFAULT;
```

<Note>
This will not reset any configuration created by the [multi-region abstractions](/docs/v23.2/multiregion-overview).
</Note>

#### Discard a region's Zone Config Extensions

To discard the Zone Config Extension settings from a region, enter the following statement:

```sql
ALTER DATABASE movr ALTER LOCALITY CONFIGURE ZONE DISCARD;
```

<Note>
When you discard a zone configuration, the objects it was applied to will then inherit a configuration from an object "the next level up"; e.g., if the object whose configuration is being discarded is a table, it will use its parent database's configuration.

However, this statement will not remove any configuration created by the [multi-region abstractions](/docs/v23.2/multiregion-overview).
</Note>

#### Troubleshoot Zone Config Extensions

The process for troubleshooting Zone Config Extensions is the same as troubleshooting any other changes to zone configs.

For instructions showing how to troubleshoot replication zones that may be misconfigured, see [Troubleshoot Replication Zone Configurations](/docs/v23.2/troubleshoot-replication-zones).

### Change database owner

#### Setup

To follow along, run [`cockroach demo`](/docs/v23.2/cockroach-demo) to start a temporary, in-memory cluster with the [`movr`](/docs/v23.2/movr) sample dataset preloaded:

```shell
$ cockroach demo
```

#### Change a database's owner

Suppose that the current owner of the `movr` database is `root` and you want to change the owner to a new user named `max`.

```sql
> ALTER DATABASE movr OWNER TO max;
```

To verify that the owner is now `max`, query the `pg_catalog.pg_database` and `pg_catalog.pg_roles` tables:

```sql
> SELECT rolname FROM pg_catalog.pg_database d JOIN pg_catalog.pg_roles r ON d.datdba = r.oid WHERE datname = 'movr';
```

```text
  rolname
-----------
  max
(1 row)
```

<Note>
If the user running the command is not an admin user, they must own the database and be a member of the new owning role. They must also have the `CREATEDB` [privilege](/docs/v23.2/security-reference/authorization#managing-privileges).
</Note>

### Set replica placement policy

#### Setup

To follow along with the examples below:

1. Start a [demo cluster](/docs/v23.2/cockroach-demo) with the [`--global` flag](/docs/v23.2/cockroach-demo#general) to simulate a multi-region cluster:

    ```shell
    cockroach demo --global --nodes 9
    ```
2. Set the demo cluster's [database regions](/docs/v23.2/multiregion-overview#database-regions) and [table localities](/docs/v23.2/multiregion-overview#table-locality) as described in [Low Latency Reads and Writes in a Multi-Region Cluster](/docs/v23.2/demo-low-latency-multi-region-deployment) (specifically, starting at [Step 5. Execute multi-region SQL statements](/docs/v23.2/demo-low-latency-multi-region-deployment#step-5-execute-multi-region-sql-statements)).
3. Enable the replica placement syntax with either the [session variable](/docs/v23.2/set-vars) or the [cluster setting](/docs/v23.2/cluster-settings) as shown below.
    1. To use the session variable:

        ```sql
        SET enable_multiregion_placement_policy = on;
        ```
    2. To use the cluster setting:

        ```sql
        SET CLUSTER SETTING sql.defaults.multiregion_placement_policy.enabled = on;
        ```

<Note>
Use [`ALTER ROLE ALL SET {sessionvar} = {val}`](/docs/v23.2/alter-role#set-default-session-variable-values-for-all-users) instead of the `sql.defaults.*` [cluster settings](/docs/v23.2/cluster-settings). This allows you to set a default value for all users for any [session variable](/docs/v23.2/set-vars) that applies during login, making the `sql.defaults.*` cluster settings redundant.
</Note>

#### Create a database with the replica placement policy set to restricted

If you know at database creation time that you'd like to set the database's replica placement policy to ["restricted"](#parameters-restricted), you can do so in a [`CREATE DATABASE`](/docs/v23.2/create-database) statement as shown below:

```sql
CREATE DATABASE movr2 PRIMARY REGION "us-east1" REGIONS "us-west1", "europe-west1" PLACEMENT RESTRICTED;
```

```text
CREATE DATABASE
```

#### Set the replica placement policy to `RESTRICTED`

When you set the database's placement policy to [`RESTRICTED`](#parameters-restricted), you are saying that you want the underlying data to be restricted to the table or partition's [home region](/docs/v23.2/multiregion-overview#table-localities).

```sql
ALTER DATABASE movr PLACEMENT RESTRICTED;
```

```text
ALTER DATABASE PLACEMENT
```

#### Set the replica placement policy to `DEFAULT`

If previously you set the replica placement policy to [`RESTRICTED`](#set-the-replica-placement-policy-to-restricted), you can set it back to [the default](#parameters-default) by issuing the following statement:

```sql
ALTER DATABASE movr PLACEMENT DEFAULT;
```

```text
ALTER DATABASE PLACEMENT
```

### Rename database

#### Rename a database

```sql
> CREATE DATABASE db1;
```

```sql
> SHOW DATABASES;
```

```text
  database_name
-----------------
  db1
  defaultdb
  movr
  postgres
  system
(5 rows)
```

```sql
> ALTER DATABASE db1 RENAME TO db2;
```

```sql
> SHOW DATABASES;
```

```text
  database_name
-----------------
  db2
  defaultdb
  movr
  postgres
  system
(5 rows)
```

### Configure survival goals

#### Survive zone failures

To change the survival goal of a multi-region database to survive zone failures, use the following statement:

```sql
ALTER DATABASE {db} SURVIVE ZONE FAILURE;
```

```text
ALTER DATABASE SURVIVE
```

<Note>
Surviving zone failures is the default setting for multi-region databases.
</Note>

For more information about the zone survival goal, see [Surviving zone failures](/docs/v23.2/multiregion-survival-goals#survive-zone-failures).

#### Survive region failures

To change the survival goal of a multi-region database to survive region failures, use the following statement:

```sql
ALTER DATABASE {db} SURVIVE REGION FAILURE;
```

```text
ALTER DATABASE SURVIVE
```

If you try to change a database with less than 3 [database regions](/docs/v23.2/multiregion-overview#database-regions) to survive region failures, the following error will be signalled:

```text
ERROR: at least 3 regions are required for surviving a region failure
SQLSTATE: 42602
HINT: you must add additional regions to the database using ALTER DATABASE mr ADD REGION <region_name>
```

For more information about the region survival goal, see [Surviving region failures](/docs/v23.2/multiregion-survival-goals#survive-region-failures).

## See also

- [Multi-Region Capabilities Overview](/docs/v23.2/multiregion-overview)
- [Secondary regions](/docs/v23.2/multiregion-overview#secondary-regions)
- [Super regions](/docs/v23.2/multiregion-overview#super-regions)
- [Zone Config Extensions](/docs/v23.2/zone-config-extensions)
- [Data Domiciling with CockroachDB](/docs/v23.2/data-domiciling)
- [`CREATE DATABASE`](/docs/v23.2/create-database)
- [`CREATE TABLE`](/docs/v23.2/create-table)
- [`ALTER TABLE`](/docs/v23.2/alter-table)
- [Online Schema Changes](/docs/v23.2/online-schema-changes)
- [SQL Statements](/docs/v23.2/sql-statements)
- [Troubleshoot Replication Zones](/docs/v23.2/troubleshoot-replication-zones)
